--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
  body {
       margin: 0;
       padding: 0;
-      background-image: url('9145.png'); /* Replace 'path/to/your/image.jpg' with the actual path to your image */
+      background-image: url('9145.jpg'); /* Replace 'path/to/your/image.jpg' with the actual path to your image */
       background-size: cover;
       background-position: center;
       font-family: Arial, sans-serif; /* Change the font if needed */
