--- a/index.css
+++ b/index.css
@@ -10,12 +10,12 @@
 
 p{
   font-family: verdana;
-  color:black;
+  color:white;
   
 }
 
 ol {
-  color:purple;
+  color:violet;
 }
 #container
 {
